--- a/app/src/main/res/layout/listview_item_order_list.xml
+++ b/app/src/main/res/layout/listview_item_order_list.xml
@@ -7,7 +7,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/selector_bg_layout_item"
+        android:background="@android:color/white"
         android:descendantFocusability="blocksDescendants"
         android:orientation="vertical"
         android:padding="@dimen/dp_15">
