--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,4 +1,4 @@
-<!--<cn.com.mangopi.android.ui.widget.MangoPtrFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<cn.com.mangopi.android.ui.widget.MangoPtrFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
     android:id="@+id/refresh_layout"
     android:layout_width="match_parent"
@@ -9,7 +9,7 @@
     cube_ptr:ptr_keep_header_when_refresh="true"
     cube_ptr:ptr_pull_to_fresh="false"
     cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
-    cube_ptr:ptr_resistance="1.8">-->
+    cube_ptr:ptr_resistance="1.8">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -173,171 +173,13 @@
                         android:scaleType="centerCrop" />
                 </LinearLayout>
 
-                <LinearLayout
+                <cn.com.mangopi.android.ui.widget.ListView
+                    android:id="@+id/lv_adverts"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:background="@android:color/white"
-                    android:orientation="vertical"
-                    android:paddingBottom="@dimen/dp_20"
-                    android:paddingLeft="@dimen/dp_10"
-                    android:paddingRight="@dimen/dp_10"
-                    android:paddingTop="@dimen/dp_20">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:gravity="center_vertical">
-
-                            <View
-                                android:layout_width="@dimen/dp_4"
-                                android:layout_height="match_parent"
-                                android:layout_marginBottom="@dimen/dp_2"
-                                android:layout_marginTop="@dimen/dp_2"
-                                android:background="@color/color_ffb900" />
-
-                            <TextView
-                                android:id="@+id/tv_title1"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/dp_4"
-                                android:textColor="@color/color_333333"
-                                android:textSize="@dimen/sp_16" />
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/tv_intro1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:textColor="@color/color_666666"
-                            android:textSize="@dimen/sp_14" />
-                    </RelativeLayout>
-
-                    <ImageView
-                        android:id="@+id/iv_advert1"
-                        android:layout_width="match_parent"
-                        android:layout_height="66dp"
-                        android:layout_marginBottom="@dimen/dp_20"
-                        android:layout_marginTop="@dimen/dp_10"
-                        android:adjustViewBounds="true"
-                        android:scaleType="centerCrop" />
-
-                    <com.fang.dashview.DashView
-                        xmlns:dash="http://schemas.android.com/apk/res-auto"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        dash:dashWidth="4dp"
-                        dash:lineWidth="4dp"
-                        dash:lineColor="@color/color_efeff4"
-                        dash:dashOrientation="0"
-                        dash:lineHeight="1dp" />
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_20"
-                        android:gravity="center_vertical">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:gravity="center_vertical">
-
-
-                            <View
-                                android:layout_width="@dimen/dp_4"
-                                android:layout_height="match_parent"
-                                android:layout_marginBottom="@dimen/dp_2"
-                                android:layout_marginTop="@dimen/dp_2"
-                                android:background="@color/color_ffb900" />
-
-                            <TextView
-                                android:id="@+id/tv_title2"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/dp_4"
-                                android:textColor="@color/color_333333"
-                                android:textSize="@dimen/sp_16" />
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/tv_intro2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:textColor="@color/color_666666"
-                            android:textSize="@dimen/sp_14" />
-                    </RelativeLayout>
-
-                    <HorizontalScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/dp_70"
-                        android:layout_marginTop="@dimen/dp_10"
-                        android:scrollbars="none">
-
-                        <LinearLayout
-                            android:id="@+id/layout_advert2"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:divider="@drawable/shape_vertical_trans_line"
-                            android:orientation="horizontal"
-                            android:showDividers="middle" />
-                    </HorizontalScrollView>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:background="@android:color/white"
-                    android:orientation="vertical"
-                    android:paddingBottom="@dimen/dp_20"
-                    android:paddingLeft="@dimen/dp_10"
-                    android:paddingRight="@dimen/dp_10"
-                    android:paddingTop="@dimen/dp_20">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:gravity="center_vertical">
-
-                        <View
-                            android:layout_width="@dimen/dp_4"
-                            android:layout_height="match_parent"
-                            android:layout_marginBottom="@dimen/dp_2"
-                            android:layout_marginTop="@dimen/dp_2"
-                            android:background="@color/color_ffb900" />
-
-                        <TextView
-                            android:id="@+id/tv_title3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/dp_4"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_16" />
-                    </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/iv_advert3"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/dp_240"
-                        android:layout_marginTop="@dimen/dp_10"
-                        android:adjustViewBounds="true"
-                        android:scaleType="centerCrop" />
-
-                </LinearLayout>
+                    android:divider="@android:color/transparent"
+                    android:cacheColorHint="@android:color/transparent"
+                    android:scrollbars="none"/>
 
                 <include layout="@layout/layout_bottom_concern" />
 
@@ -354,5 +196,5 @@
             android:layout_alignParentTop="true" />
 
     </RelativeLayout>
-<!--
-</cn.com.mangopi.android.ui.widget.MangoPtrFrameLayout>-->
+
+</cn.com.mangopi.android.ui.widget.MangoPtrFrameLayout>
