--- a/app/src/main/res/layout/activity_set_order_calendar.xml
+++ b/app/src/main/res/layout/activity_set_order_calendar.xml
@@ -24,6 +24,8 @@
                 android:id="@+id/gv_calendar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:verticalSpacing="@dimen/dp_0.5"
+                android:horizontalSpacing="@dimen/dp_0.5"
                 android:numColumns="7" />
         </LinearLayout>
 
