--- a/app/src/main/res/layout/gridview_item_order_calendar.xml
+++ b/app/src/main/res/layout/gridview_item_order_calendar.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_day"
     android:layout_width="match_parent"
+    android:background="@android:color/white"
     android:layout_height="wrap_content">
 
     <TextView
