--- a/app/src/main/res/layout/layout_item_update_role.xml
+++ b/app/src/main/res/layout/layout_item_update_role.xml
@@ -11,7 +11,9 @@
         android:layout_height="@dimen/dp_40"
         android:layout_marginTop="@dimen/dp_2"
         android:adjustViewBounds="true"
-        android:scaleType="centerInside"/>
+        android:duplicateParentState="true"
+        android:clickable="true"
+        android:longClickable="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
