--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,29 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_efeff4">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/layout_tab"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_49"
         android:background="@color/color_ffb900">
-        <TextView
-            android:id="@+id/tv_left"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            style="@style/repple_out_backguound"
-            android:gravity="center"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_16"
-            android:ellipsize="end"
-            android:text="@string/teacher"
-            android:visibility="gone"
-            android:singleLine="true"
-            android:paddingBottom="@dimen/dp_11.5"
-            android:paddingTop="@dimen/dp_11.5"
-            android:paddingLeft="@dimen/dp_15"
-            android:paddingRight="@dimen/dp_30"/>
 
         <TextView
             android:id="@+id/tv_right"
@@ -33,9 +19,9 @@
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_16"
             android:ellipsize="end"
-            android:text="我的授课"
+            android:text="取消"
             android:singleLine="true"
-            android:paddingRight="@dimen/dp_10"
+            android:paddingRight="@dimen/dp_15"
             style="@style/repple_out_backguound"
             android:layout_alignParentRight="true"/>
 
@@ -45,41 +31,34 @@
             android:layout_height="@dimen/dp_31"
             android:layout_centerVertical="true"
             android:gravity="center_vertical"
-            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginRight="@dimen/dp_15"
             android:background="@drawable/shape_bg_rect_tab_search"
-            android:layout_toRightOf="@id/tv_left"
             android:layout_toLeftOf="@id/tv_right">
 
             <ImageView
                 android:id="@+id/iv_tab_search"
                 android:layout_width="@dimen/dp_22"
                 android:layout_height="@dimen/dp_22"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/dp_10"
+                android:layout_marginLeft="@dimen/dp_10"
                 android:layout_centerVertical="true"
                 android:src="@drawable/sousuo"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"/>
-            <EditText
-                android:id="@+id/et_search"
+            <TextView
+                android:id="@+id/tv_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_15"
-                android:textColorHint="@color/color_999999"
+                android:textColor="@color/color_999999"
+                android:layout_toRightOf="@id/iv_tab_search"
                 android:layout_centerVertical="true"
-                android:background="@null"
+                android:gravity="center"
                 android:textSize="@dimen/sp_12"
-                android:hint="输入您需要的工作包或导师"/>
+                android:text="输入您需要的工作包或导师"/>
 
         </RelativeLayout>
     </RelativeLayout>
 
-    <include layout="@layout/layout_pull_listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/layout_tab"/>
-
-
-
-</RelativeLayout>
+    <include layout="@layout/layout_pull_listview" />
+</LinearLayout>
