--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -63,7 +63,16 @@
                 android:id="@+id/layout_clear_cache"
                 layout="@layout/layout_item_setting" />
 
-
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_login_out"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_42"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginTop="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_15"
+            style="@style/important_corners_btn"
+            android:text="退出登录"/>
     </LinearLayout>
 </ScrollView>
