--- a/app/src/main/res/layout/layout_header_teacher_detail.xml
+++ b/app/src/main/res/layout/layout_header_teacher_detail.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_180"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerInside"/>
 
     <LinearLayout
         android:layout_width="match_parent"
