--- a/app/src/main/res/layout/layout_listview_empty.xml
+++ b/app/src/main/res/layout/layout_listview_empty.xml
@@ -9,8 +9,7 @@
     <ImageView
         android:id="@id/iv_empty"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher" >
+        android:layout_height="wrap_content" >
     </ImageView>
 
     <TextView
