--- a/app/src/main/res/layout/activity_works_project_detail.xml
+++ b/app/src/main/res/layout/activity_works_project_detail.xml
@@ -20,6 +20,7 @@
             android:layout_height="@dimen/dp_22"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
+            android:src="@drawable/faxian_xiangting"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
@@ -66,7 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_180"
                 android:adjustViewBounds="true"
-                android:scaleType="centerInside" />
+                android:scaleType="centerCrop" />
 
             <TextView
                 android:id="@+id/tv_project_name"
@@ -108,7 +109,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:textColor="@color/color_666666"
-                        android:textSize="@dimen/sp_16" />
+                        android:textSize="@dimen/sp_14" />
 
                     <TextView
                         android:id="@+id/tv_location"
@@ -118,7 +119,7 @@
                         android:ellipsize="end"
                         android:layout_toLeftOf="@id/tv_progress"
                         android:textColor="@color/color_666666"
-                        android:textSize="@dimen/sp_16" />
+                        android:textSize="@dimen/sp_14" />
                 </RelativeLayout>
 
                 <TextView
@@ -133,7 +134,7 @@
                     android:paddingRight="@dimen/dp_20"
                     android:paddingTop="@dimen/dp_10"
                     android:textColor="@color/color_666666"
-                    android:textSize="@dimen/sp_16" />
+                    android:textSize="@dimen/sp_14" />
 
             </LinearLayout>
 
