--- a/app/src/main/res/layout/layout_item_course_banner.xml
+++ b/app/src/main/res/layout/layout_item_course_banner.xml
@@ -8,8 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
-        android:scaleType="centerInside"
-        android:src="@drawable/home_kecheng" />
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/tv_title"
