--- a/app/src/main/res/layout/layout_home_setting_one.xml
+++ b/app/src/main/res/layout/layout_home_setting_one.xml
@@ -50,15 +50,14 @@
             android:textSize="@dimen/sp_14" />
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/iv_advert1"
+    <cn.com.mangopi.android.ui.widget.ListView
+        android:id="@+id/lv_advert_one_item"
         android:layout_width="match_parent"
-        android:layout_height="66dp"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginLeft="@dimen/dp_10"
         android:layout_marginRight="@dimen/dp_10"
         android:layout_marginBottom="@dimen/dp_20"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop" />
-
+        android:cacheColorHint="@android:color/transparent"/>
 </LinearLayout>
