--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,4 +4,11 @@
     android:layout_height="match_parent"
     android:background="@color/color_efeff4">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/welcome"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
+
 </LinearLayout>
