--- a/app/src/main/res/layout/listview_item_interact_area.xml
+++ b/app/src/main/res/layout/listview_item_interact_area.xml
@@ -18,7 +18,7 @@
             <cn.com.mangopi.android.ui.widget.RoundImageView xmlns:round="http://schemas.android.com/apk/res-auto"
                 android:layout_width="@dimen/dp_49"
                 android:layout_height="@dimen/dp_49"
-                android:src="@drawable/none" />
+                android:src="@mipmap/logo" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -63,7 +63,6 @@
                         android:layout_marginTop="@dimen/dp_4"
                         android:ellipsize="end"
                         android:singleLine="true"
-                        android:text="这里是用户名字"
                         android:textColor="@color/color_333333"
                         android:textSize="@dimen/dp_15" />
 
@@ -72,7 +71,6 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_marginBottom="@dimen/dp_4"
-                        android:text="这里是用户名字"
                         android:textColor="@color/color_999999"
                         android:textSize="@dimen/sp_12" />
                 </RelativeLayout>
@@ -83,7 +81,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_15"
-            android:text="附近的看过了都放假了看"
             android:textColor="@color/color_666666"
             android:textSize="@dimen/sp_14" />
 
