--- a/app/src/main/res/layout/layout_select_gender_in_dialog.xml
+++ b/app/src/main/res/layout/layout_select_gender_in_dialog.xml
@@ -2,36 +2,32 @@
 <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:orientation="horizontal">
 
-    <FrameLayout
-        android:layout_width="0dp"
+
+    <RadioButton
+        android:id="@+id/rb_male"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_gravity="center"
+        android:layout_marginRight="@dimen/dp_15"
+        android:button="@drawable/shape_radio_button"
+        android:text="  男"
+        android:textColor="@color/color_333333"
+        android:textSize="@dimen/sp_16" />
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:button="@drawable/shape_radio_button"
-            android:text="  男"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_16" />
-    </FrameLayout>
 
-    <FrameLayout
-        android:layout_width="0dp"
+    <RadioButton
+        android:id="@+id/rb_female"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_gravity="center"
+        android:layout_marginLeft="@dimen/dp_15"
+        android:button="@drawable/shape_radio_button"
+        android:text="  女"
+        android:textColor="@color/color_333333"
+        android:textSize="@dimen/sp_16" />
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:button="@drawable/shape_radio_button"
-            android:layout_gravity="center"
-            android:text="  女"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_16" />
-    </FrameLayout>
 
 </RadioGroup>
