--- a/app/src/main/res/drawable/shape_radio_button.xml
+++ b/app/src/main/res/drawable/shape_radio_button.xml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false">
-        <shape android:shape="oval">
-            <solid android:color="@color/white" />
-            <stroke android:width="1dp" android:color="@color/color_666666" />
-            <size android:width="16dp" android:height="16dp" />
-        </shape>
+    <item android:state_checked="false" android:drawable="@drawable/unselected" >
+
     </item>
-    <item android:state_checked="true" >
-        <shape android:shape="oval">
-            <solid android:color="@color/white" />
-            <stroke android:width="1dp" android:color="@color/color_ffb900" />
-            <size android:width="16dp" android:height="16dp" />
-        </shape>
+    <item android:state_checked="true" android:drawable="@drawable/select" >
 
     </item>
 </selector>
