--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -64,7 +64,9 @@
                 android:textSize="@dimen/sp_14" />
         </LinearLayout>
 
-        <View style="@style/horizontal_line" />
+        <View
+            android:id="@+id/layout_classify"
+            style="@style/horizontal_line" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -93,7 +95,9 @@
                 android:textSize="@dimen/sp_14" />
         </LinearLayout>
 
-        <View style="@style/horizontal_line" />
+        <View
+            android:id="@+id/layout_type"
+            style="@style/horizontal_line" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -111,6 +115,7 @@
                 android:textSize="@dimen/sp_14" />
 
             <TextView
+                android:id="@+id/tv_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right|center"
