--- a/app/src/main/res/layout/activity_upgrade_to_community.xml
+++ b/app/src/main/res/layout/activity_upgrade_to_community.xml
@@ -92,7 +92,9 @@
                     android:visibility="visible" />
             </LinearLayout>
 
-            <View style="@style/horizontal_line" />
+            <View
+                android:id="@+id/line_type"
+                style="@style/horizontal_line" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -255,7 +257,9 @@
                     android:visibility="visible" />
             </LinearLayout>
 
-            <View style="@style/horizontal_line" />
+            <View
+                android:id="@+id/line_classify"
+                style="@style/horizontal_line" />
 
             <LinearLayout
                 android:layout_width="match_parent"
