--- a/app/src/main/res/layout/activity_teacher_detail.xml
+++ b/app/src/main/res/layout/activity_teacher_detail.xml
@@ -7,14 +7,14 @@
         android:id="@+id/layout_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:padding="@dimen/dp_15">
+        android:layout_alignParentBottom="true">
         <ImageView
             android:id="@+id/iv_want"
             android:layout_width="@dimen/dp_22"
             android:layout_height="@dimen/dp_22"
             android:adjustViewBounds="true"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/dp_15"
             android:scaleType="centerInside"/>
         <TextView
             android:layout_width="wrap_content"
@@ -36,6 +36,9 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:textColor="@color/color_333333"
+            android:layout_marginRight="@dimen/dp_15"
+            android:layout_marginBottom="@dimen/dp_15"
+            android:layout_marginTop="@dimen/dp_15"
             android:text="立即听他的课"
             android:textSize="@dimen/dp_14"/>
     </RelativeLayout>
