--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -10,16 +10,15 @@
 
     <Button
         android:id="@+id/btn_start"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         style="@style/important_corners_btn"
-        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
         android:layout_marginLeft="@dimen/dp_15"
         android:layout_marginRight="@dimen/dp_15"
-        android:visibility="gone"
-        android:text="点击进入"
+        android:textColor="@android:color/white"
+        android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/dp_84"
-        android:textColor="@android:color/white"/>
+        android:visibility="gone"
+        android:text="点击进入"/>
 
     <LinearLayout
         android:id="@+id/layout_indicator"
