--- a/app/src/main/res/layout/activity_my_order_list.xml
+++ b/app/src/main/res/layout/activity_my_order_list.xml
@@ -7,9 +7,27 @@
 
     <include layout="@layout/bar_tab" />
 
-    <cn.com.mangopi.android.ui.widget.ViewPagerFixed
-        android:id="@+id/view_pager"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
+        <cn.com.mangopi.android.ui.widget.ViewPagerFixed
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/tv_see_plan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_ffb900"
+            android:gravity="center"
+            android:textSize="@dimen/sp_16"
+            android:visibility="gone"
+            android:paddingTop="@dimen/dp_15"
+            android:paddingBottom="@dimen/dp_15"
+            android:background="@android:color/white"
+            android:text="查看我的日程安排"
+            android:layout_gravity="bottom"/>
+    </FrameLayout>
 </LinearLayout>
