--- a/app/src/main/res/layout/activity_set_order_calendar.xml
+++ b/app/src/main/res/layout/activity_set_order_calendar.xml
@@ -9,10 +9,44 @@
         android:layout_height="match_parent"
         android:background="@color/color_efeff4">
 
+        <RelativeLayout
+            android:id="@+id/layout_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:layout_alignParentBottom="true">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_15"
+                style="@style/important_corners_btn"
+                android:layout_marginBottom="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_10"
+                android:textSize="@dimen/sp_14"
+                android:text="重新安排"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:padding="@dimen/dp_10"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dp_15"
+                style="@style/lesser_corners_btn"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:textSize="@dimen/sp_14"
+                android:text="查看这个时间段的订单"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:padding="@dimen/dp_10"/>
+        </RelativeLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:layout_above="@id/layout_bottom"
             android:paddingBottom="@dimen/dp_15"
             android:paddingLeft="@dimen/dp_15"
             android:paddingRight="@dimen/dp_15"
