--- a/app/src/main/res/layout/layout_header_teacher_detail.xml
+++ b/app/src/main/res/layout/layout_header_teacher_detail.xml
@@ -32,6 +32,29 @@
             android:textSize="@dimen/sp_14" />
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="【导师简介】"
+        android:textSize="@dimen/sp_16"
+        android:layout_marginTop="@dimen/dp_15"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:textColor="@color/color_333333"/>
+
+    <TextView
+        android:id="@+id/tv_tutor_intro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_15"
+        android:layout_marginBottom="@dimen/dp_15"
+        android:textColor="@color/color_666666"
+        android:paddingLeft="@dimen/dp_15"
+        android:paddingRight="@dimen/dp_15"
+        android:textSize="@dimen/sp_14" />
+
+    <View
+        style="@style/horizontal_line" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
