--- a/app/src/main/res/layout/activity_teacher_detail.xml
+++ b/app/src/main/res/layout/activity_teacher_detail.xml
@@ -17,6 +17,7 @@
             android:layout_marginLeft="@dimen/dp_15"
             android:scaleType="centerInside"/>
         <TextView
+            android:id="@+id/tv_want_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
