--- a/app/src/main/res/layout/listview_item_order_list.xml
+++ b/app/src/main/res/layout/listview_item_order_list.xml
@@ -123,6 +123,25 @@
                 android:paddingRight="@dimen/dp_10"
                 android:paddingTop="@dimen/dp_8"
                 android:layout_marginBottom="@dimen/dp_15"
+                android:text="安排日程"
+                android:textColor="@drawable/selector_text_color_lesser_btn"
+                android:textSize="@dimen/sp_14"
+                android:visibility="visible" />
+
+            <Button
+                android:id="@+id/btn_un_act"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:background="@drawable/selector_btn_bg_lesser_corners"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:paddingBottom="@dimen/dp_8"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingRight="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_8"
+                android:layout_marginBottom="@dimen/dp_15"
                 android:text="取消安排"
                 android:textColor="@drawable/selector_text_color_lesser_btn"
                 android:textSize="@dimen/sp_14"
