--- a/app/src/main/res/layout/layout_popupwindow_share.xml
+++ b/app/src/main/res/layout/layout_popupwindow_share.xml
@@ -1,7 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:horizontalSpacing="@dimen/dp_15"
-    android:verticalSpacing="@dimen/dp_15"
-    android:numColumns="4" />
+    android:orientation="vertical">
+
+    <GridView
+        android:id="@+id/gv_platform"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:horizontalSpacing="@dimen/dp_15"
+        android:numColumns="4"
+        android:verticalSpacing="@dimen/dp_15" />
+
+    <View
+        style="@style/horizontal_line"/>
+
+    <TextView
+        android:id="@+id/tv_cancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dp_15"
+        android:gravity="center"
+        android:text="@string/cancel"
+        android:textSize="@dimen/sp_14"
+        android:textColor="@color/color_666666"/>
+</LinearLayout>
