--- a/app/src/main/res/layout/listview_item_found.xml
+++ b/app/src/main/res/layout/listview_item_found.xml
@@ -117,5 +117,6 @@
         android:id="@+id/v_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_10"
+        android:visibility="gone"
         android:background="@color/color_efeff4" />
 </LinearLayout>
