--- a/app/src/main/res/layout/activity_project_join.xml
+++ b/app/src/main/res/layout/activity_project_join.xml
@@ -18,8 +18,7 @@
             android:textSize="@dimen/sp_16" />
 
         <View
-            style="@style/horizontal_line"
-            android:layout_marginTop="@dimen/dp_15" />
+            style="@style/horizontal_line" />
 
         <RadioGroup
             android:id="@+id/rg_join_type"
