--- a/app/src/main/res/layout/listview_item_interact_area.xml
+++ b/app/src/main/res/layout/listview_item_interact_area.xml
@@ -4,6 +4,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <View
+        android:id="@+id/v_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_0.5"
+        android:background="@color/color_efeff4"/>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +22,7 @@
             android:layout_height="wrap_content">
 
             <cn.com.mangopi.android.ui.widget.RoundImageView xmlns:round="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/iv_avatar"
                 android:layout_width="@dimen/dp_49"
                 android:layout_height="@dimen/dp_49"
                 android:src="@mipmap/logo" />
@@ -39,7 +46,15 @@
                         android:layout_gravity="center_vertical"
                         android:adjustViewBounds="true"
                         android:scaleType="centerInside"
-                        android:src="@drawable/ic_launcher" />
+                        android:src="@drawable/icon_pinglun" />
+                    <TextView
+                        android:id="@+id/tv_comment_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/dp_6"
+                        android:textSize="@dimen/sp_14"
+                        android:textColor="@color/color_666666"/>
 
                     <ImageView
                         android:layout_width="@dimen/dp_22"
@@ -48,7 +63,15 @@
                         android:layout_marginLeft="@dimen/dp_10"
                         android:adjustViewBounds="true"
                         android:scaleType="centerInside"
-                        android:src="@drawable/ic_launcher" />
+                        android:src="@drawable/icon_like_nor" />
+                    <TextView
+                        android:id="@+id/tv_praise_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="@dimen/sp_14"
+                        android:layout_marginLeft="@dimen/dp_6"
+                        android:textColor="@color/color_666666"/>
                 </LinearLayout>
 
                 <RelativeLayout
@@ -58,6 +81,7 @@
                     android:layout_toLeftOf="@id/layout_top_right">
 
                     <TextView
+                        android:id="@+id/tv_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/dp_4"
@@ -67,6 +91,7 @@
                         android:textSize="@dimen/dp_15" />
 
                     <TextView
+                        android:id="@+id/tv_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
@@ -78,6 +103,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_15"
@@ -86,9 +112,5 @@
 
     </LinearLayout>
 
-    <View
-        android:id="@+id/v_line"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_10"
-        android:background="@color/color_efeff4"/>
+
 </LinearLayout>
