--- a/app/src/main/res/layout/activity_project_work_detail.xml
+++ b/app/src/main/res/layout/activity_project_work_detail.xml
@@ -4,12 +4,117 @@
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/tv_project_name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/dp_15"
-        android:textColor="@color/color_333333"
-        android:textSize="@dimen/sp_16"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tv_project_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp_15"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_16" />
+
+        <View
+            android:id="@+id/line_photo"
+            style="@style/margin_horizontal_line" />
+
+        <LinearLayout
+            android:id="@+id/layout_works_photo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/dp_15">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="作品照片："
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+
+            <cn.com.mangopi.android.ui.widget.GridView
+                android:id="@+id/gv_works_photo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                android:numColumns="4"
+                android:verticalSpacing="@dimen/dp_10"
+                android:horizontalSpacing="@dimen/dp_10"
+                android:scrollbars="none" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/line_doc"
+            style="@style/margin_horizontal_line" />
+
+        <LinearLayout
+            android:id="@+id/layout_doc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/dp_15">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="文档方案："
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+
+            <cn.com.mangopi.android.ui.widget.GridView
+                android:id="@+id/gv_works_doc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                android:numColumns="4"
+                android:verticalSpacing="@dimen/dp_10"
+                android:horizontalSpacing="@dimen/dp_10"
+                android:scrollbars="none" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/line_team"
+            style="@style/margin_horizontal_line" />
+
+        <LinearLayout
+            android:id="@+id/layout_team"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/dp_15">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="团队照片："
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+
+            <cn.com.mangopi.android.ui.widget.GridView
+                android:id="@+id/gv_team_photo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                android:numColumns="4"
+                android:verticalSpacing="@dimen/dp_10"
+                android:horizontalSpacing="@dimen/dp_10"
+                android:scrollbars="none" />
+        </LinearLayout>
+
+        <View
+            style="@style/margin_horizontal_line" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp_15"
+            android:gravity="center"
+            android:textColor="@color/color_666666"
+            android:textSize="@dimen/sp_14"
+            android:text="@string/works_collection_bottom_tip"/>
+
+    </LinearLayout>
 </ScrollView>
