--- a/app/src/main/res/layout/listview_item_found.xml
+++ b/app/src/main/res/layout/listview_item_found.xml
@@ -10,12 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="@dimen/dp_15"
-        android:paddingRight="@dimen/dp_15"
         android:paddingTop="@dimen/dp_20">
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginRight="@dimen/dp_15"
             android:layout_height="wrap_content">
 
             <cn.com.mangopi.android.ui.widget.RoundImageView
@@ -74,12 +74,59 @@
 
         <TextView
             android:id="@+id/tv_content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_15"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginRight="@dimen/dp_15"
             android:textColor="@color/color_666666"
             android:textSize="@dimen/sp_14" />
+
+        <LinearLayout
+            android:id="@+id/layout_forward"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:layout_marginBottom="@dimen/dp_15"
+            android:background="@color/color_f6f6f7"
+            android:paddingTop="@dimen/dp_15"
+            android:paddingBottom="@dimen/dp_15">
+
+            <TextView
+                android:id="@+id/tv_forward_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_10"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginRight="@dimen/dp_15"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+
+            <ImageView
+                android:id="@+id/iv_forward_picture"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp_160"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginRight="@dimen/dp_15"
+                android:adjustViewBounds="true"
+                android:visibility="gone"
+                android:layout_gravity="left"/>
+
+            <cn.com.mangopi.android.ui.widget.GridView
+                android:id="@+id/gv_forward_picture"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numColumns="3"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginRight="@dimen/dp_15"
+                android:horizontalSpacing="@dimen/dp_5"
+                android:verticalSpacing="@dimen/dp_5"
+                android:background="@android:color/white"
+                android:visibility="gone"/>
+        </LinearLayout>
+
 
         <ImageView
             android:id="@+id/iv_picture"
@@ -87,6 +134,8 @@
             android:layout_height="@dimen/dp_180"
             android:adjustViewBounds="true"
             android:layout_gravity="left"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginRight="@dimen/dp_15"
             android:layout_marginBottom="@dimen/dp_15"/>
 
         <cn.com.mangopi.android.ui.widget.GridView
@@ -95,6 +144,8 @@
             android:layout_marginBottom="@dimen/dp_15"
             android:layout_height="wrap_content"
             android:numColumns="3"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginRight="@dimen/dp_15"
             android:horizontalSpacing="@dimen/dp_5"
             android:verticalSpacing="@dimen/dp_5"
             android:background="@android:color/white"
@@ -105,6 +156,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_15"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginRight="@dimen/dp_15"
             android:textColor="@color/color_999999"
             android:textSize="@dimen/sp_12" />
     </LinearLayout>
