--- a/app/src/main/res/layout/gridview_item_order_calendar.xml
+++ b/app/src/main/res/layout/gridview_item_order_calendar.xml
@@ -13,4 +13,12 @@
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp_16"/>
 
+    <ImageView
+        android:id="@+id/iv_course_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:visibility="gone"
+        android:src="@drawable/icon_ke"/>
+
 </FrameLayout>
