--- a/app/src/main/res/layout/activity_order_schedule_calendar.xml
+++ b/app/src/main/res/layout/activity_order_schedule_calendar.xml
@@ -63,6 +63,7 @@
                 android:numColumns="7" />
 
             <TextView
+                android:id="@+id/tv_time_tip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/sp_14"
@@ -76,8 +77,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_15"
-                android:verticalSpacing="@dimen/dp_4"
-                android:horizontalSpacing="@dimen/dp_4"
+                android:verticalSpacing="@dimen/dp_10"
+                android:horizontalSpacing="@dimen/dp_10"
                 android:numColumns="3" />
         </LinearLayout>
 
