--- a/app/src/main/res/layout/tab_item_main_indicator.xml
+++ b/app/src/main/res/layout/tab_item_main_indicator.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    style="@style/repple_out_backguound">
 
     <LinearLayout
-        style="@style/repple_out_backguound"
         android:id="@+id/layout_tab"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
