--- a/app/src/main/res/layout/activity_order_schedule_calendar.xml
+++ b/app/src/main/res/layout/activity_order_schedule_calendar.xml
@@ -16,6 +16,7 @@
             android:background="@android:color/white"
             android:layout_alignParentBottom="true">
             <Button
+                android:id="@+id/btn_reset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_15"
@@ -29,6 +30,22 @@
                 android:padding="@dimen/dp_10"/>
 
             <Button
+                android:id="@+id/btn_add_schedule"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_15"
+                style="@style/important_corners_btn"
+                android:layout_marginBottom="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_10"
+                android:textSize="@dimen/sp_14"
+                android:text="添加安排"
+                android:layout_centerInParent="true"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:padding="@dimen/dp_10"/>
+
+            <Button
+                android:id="@+id/btn_to_order_by_schedule"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/dp_15"
