--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -196,6 +196,12 @@
                 android:id="@+id/layout_role"
                 layout="@layout/layout_item_profile" />
 
+            <include
+                android:id="@+id/layout_coupon"
+                layout="@layout/layout_item_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_0.5" />
 
             <include
                 android:id="@+id/layout_order_list"
