--- a/app/src/main/res/layout/activity_order_schedule_calendar.xml
+++ b/app/src/main/res/layout/activity_order_schedule_calendar.xml
@@ -1,70 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/color_efeff4"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:layout_width="match_parent">
 
     <RelativeLayout
+        android:background="@android:color/white"
+        android:id="@+id/layout_bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <Button
+            style="@style/important_corners_btn"
+            android:id="@+id/btn_reset"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp_10"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_width="wrap_content"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:padding="@dimen/dp_10"
+            android:text="重新安排"
+            android:textSize="@dimen/sp_14" />
+
+        <Button
+            style="@style/important_corners_btn"
+            android:id="@+id/btn_add_schedule"
+            android:layout_centerInParent="true"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp_10"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_width="wrap_content"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:padding="@dimen/dp_10"
+            android:text="添加安排"
+            android:textSize="@dimen/sp_14" />
+
+        <Button
+            style="@style/lesser_corners_btn"
+            android:id="@+id/btn_to_order_by_schedule"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/dp_15"
+            android:layout_width="wrap_content"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:padding="@dimen/dp_10"
+            android:text="查看这个时间段的订单"
+            android:textSize="@dimen/sp_14" />
+    </RelativeLayout>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_efeff4">
-
-        <RelativeLayout
-            android:id="@+id/layout_bottom"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:layout_alignParentBottom="true">
-            <Button
-                android:id="@+id/btn_reset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_15"
-                style="@style/important_corners_btn"
-                android:layout_marginBottom="@dimen/dp_10"
-                android:layout_marginTop="@dimen/dp_10"
-                android:textSize="@dimen/sp_14"
-                android:text="重新安排"
-                android:minHeight="0dp"
-                android:minWidth="0dp"
-                android:padding="@dimen/dp_10"/>
-
-            <Button
-                android:id="@+id/btn_add_schedule"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_15"
-                style="@style/important_corners_btn"
-                android:layout_marginBottom="@dimen/dp_10"
-                android:layout_marginTop="@dimen/dp_10"
-                android:textSize="@dimen/sp_14"
-                android:text="添加安排"
-                android:layout_centerInParent="true"
-                android:minHeight="0dp"
-                android:minWidth="0dp"
-                android:padding="@dimen/dp_10"/>
-
-            <Button
-                android:id="@+id/btn_to_order_by_schedule"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/dp_15"
-                style="@style/lesser_corners_btn"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:textSize="@dimen/sp_14"
-                android:text="查看这个时间段的订单"
-                android:minHeight="0dp"
-                android:minWidth="0dp"
-                android:padding="@dimen/dp_10"/>
-        </RelativeLayout>
+        android:layout_above="@id/layout_bottom"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_above="@id/layout_bottom"
-            android:paddingBottom="@dimen/dp_15"
             android:paddingLeft="@dimen/dp_15"
             android:paddingRight="@dimen/dp_15"
             android:paddingTop="@dimen/dp_5">
@@ -75,29 +75,30 @@
                 android:id="@+id/gv_calendar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:verticalSpacing="@dimen/dp_0.5"
                 android:horizontalSpacing="@dimen/dp_0.5"
-                android:numColumns="7" />
+                android:numColumns="7"
+                android:verticalSpacing="@dimen/dp_0.5" />
 
             <TextView
                 android:id="@+id/tv_time_tip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/sp_14"
-                android:textColor="@color/color_333333"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/dp_15"/>
+                android:layout_marginTop="@dimen/dp_15"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp_14" />
 
             <cn.com.mangopi.android.ui.widget.GridView
                 android:id="@+id/gv_sct_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_15"
-                android:verticalSpacing="@dimen/dp_10"
+                android:layout_marginBottom="@dimen/dp_15"
                 android:horizontalSpacing="@dimen/dp_10"
-                android:numColumns="3" />
+                android:numColumns="3"
+                android:verticalSpacing="@dimen/dp_10" />
         </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
 
-    </RelativeLayout>
 
-</ScrollView>
