--- a/app/src/main/res/layout/activity_trenf_forward.xml
+++ b/app/src/main/res/layout/activity_trenf_forward.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/dp_15"
             android:layout_margin="@dimen/dp_15"
-            android:background="@color/color_cccccc">
+            android:background="@color/color_efeff4">
 
             <cn.com.mangopi.android.ui.widget.RoundImageView
                 android:id="@+id/iv_avatar"
