--- a/app/src/main/res/layout/gridview_item_order_schedule_calendar_time.xml
+++ b/app/src/main/res/layout/gridview_item_order_schedule_calendar_time.xml
@@ -15,10 +15,11 @@
         android:textSize="@dimen/sp_14"/>
 
     <TextView
+        android:id="@+id/tv_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/color_666666"
         android:layout_alignParentRight="true"
-        android:text="11人"
+        android:text="0人"
         android:textSize="@dimen/sp_14"/>
 </RelativeLayout>
